--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 	<body>
 		<h2><marquee>Coming soon....</marquee></h2>
 	</body>
-
+<footer>
+	<div class="realtimeuserscounter realtimeuserscounter--styled"></div>
+<script src="https://realtimeusers.bycontrast.co/realtimeusers.js"></script>
+	</footer>
 </html>
